src/evdev-mt-touchpad.c
@@ -957,11 +957,11 @@ tp_need_motion_history_reset(struct tp_dispatch *tp)
 {
 	bool rc = false;
 
-	/* Semi-mt finger postions may "jump" when nfingers changes. And on
-	 * a non-clickpad the only reason to have more than one finger down
-	 * is scrolling/gesture, so a reset just makes things sane again */
-	if ((tp->semi_mt || !tp->buttons.is_clickpad) &&
-	    tp->nfingers_down != tp->old_nfingers_down)
+	/* Changing the numbers of fingers can cause a jump in the
+	 * coordinates, always reset the motion history for all touches when
+	 * that happens.
+	 */
+	if (tp->nfingers_down != tp->old_nfingers_down)
 		return true;
 
 	/* if we're transitioning between slots and fake touches in either
